# numax

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  README_GETTING_STARTED.md  demo_v2.sh  pyproject.toml  run_demo.py
.github/workflows/: ci.yml
benchmarks/: live_session_bench.py  metrics.py  report.py  runner.py  runtime_adapter.py
benchmarks/baselines/: llm_only.py  llm_tools.py  llm_tools_memory.py
benchmarks/outputs/: benchmark_report.json  benchmark_report.md
configs/: base.yaml  budget.yaml  governance.yaml  providers.yaml  routing.yaml
data/state/: continuity.json
data/store/: jobs__038d3144-cf58-4e5c-ac4e-a1e8d417b1f1.json  jobs__185e5a7d-e072-433a-96cc-7ba8999f1398.json  jobs__718f2a24-ea65-417d-a3cc-ec462807d3d8.json  jobs__cd98450e-4125-40a3-88d6-84c7506b9708.json  jobs__d963ac42-bac1-45bb-93e7-fda9cb5fe532.json  jobs__ed4df6ac-7aac-4014-8e62-035f31958c6c.json
data/traces/: 40e1d1c7-4a5a-4c04-8014-703401672327.jsonl
docs/: 1.md  2.md  KNOWN_LIMITATIONS.md  OPERATIONS.md  RELEASE_CHECKLIST.md  architecture.md  benchmark.md  deterministic_vs_learned.md  execution_plan_v2.md  existe ill un systeme d'apprentissage paar qusstioinnement un allgorihme .md  info.md  readme_numax_tech_v_0_1.md  readme_numax_v_1 (1).md  roadmap.md  roadmap_v2.md  scale_prod.md  theory_of_victory.md  validation_v1.md
numax/: app.py  bootstrap.py
numax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
numax/action/: artifacts.py
numax/artifacts/: evaluators.py  factory.py  policies.py  (+5 more)
recipes/: basic_research.json
(+344 files in other folders)
